--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,6 @@
 body{
     margin: 0;
     padding: 0;
-    background-color: #f0f2f5;
     overflow-x: hidden;
 }
 a{
@@ -9,4 +8,12 @@ a{
 }
 button:disabled{
     cursor:not-allowed !important
+}
+h1,h2,h3,h4,h5,h6{
+    margin: 0;padding: 0;
+    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+}
+p{
+    margin: 0;padding: 0;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
