--- a/src/Components/TopCat/topCart.css
+++ b/src/Components/TopCat/topCart.css
@@ -1,133 +1,114 @@
-.TopCart{
-    width: 100vw;
+.promotionTwo{
+    width:100vw;
     display: flex;
     justify-content: center;
+    margin-top: 90px;
 }
-.TopCartWrapper{
+.promotionTwoWrapper{
     width: 100%;
-    background-color: #2a2a2a;
-    background-image: url(../../../public/Images/bg.png);
+    height: 250px;
+    background-color: rgba(254, 252, 232, 0.7);
     display: flex;
-    flex-direction: column;
-    -webkit-box-shadow:0px 1px 16px -8px rgba(0,0,0,0.67);
-    box-shadow: 0px 0px 16px -8px rgba(0,0,0,0.67);
+    padding: 70px 30px;
+    position: relative;
+    justify-content: flex-end;
 }
-.TopCartTop{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.TopCartTop h5{
-    font-size: 30px;
-    color: white;
-    font-weight: 700 ;
-    margin: 20px 0;
-}
-
-.TopCartBottom{
-    width: 100%;
-    display: flex;
-    align-items: center;
-    flex-wrap: wrap;    
-}
-.TopCartBottomCard{
-    display: flex;
-    justify-content: space-around;
-    width: 450px;
-    cursor: pointer;
-    transition: all 0.5s;
-    margin-bottom: 30px;
-    position: relative;/* background-color: black; */
-}
-
-.TopCartBottomCard img{
-    width: 420px;
-    height: 200px;
-    object-fit: cover;
-}
-.catDesc h5{
-    font-size: 30px;
-    line-height: 30px;
-    text-shadow: 2px 0 3px #000;
-    margin-bottom: 5px;
-    font-weight: 800;
-    color: #fff;
-
-}
-.catDesc{
+.promotionTwoTop{
     position: absolute;
+    top: -50px;
+    left: 163px
+}
+.promotionTwoTop img{
+    width: 51%;
+    height: 100%;
+    object-fit: fill;
+  
+}
+.promotionTwoBottom{
+    width:40%;
     display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    left:41px;
-    top: 70px;
-    
+    flex-direction:column;
+    margin-right: 50px;
+    justify-content:flex-end
+} 
+.promotionTwoBottom h4{
+    color:black;
+    font-size:35px;
+    margin:5px;
 }
-.catDesc h6{
-    font-size: 20px;
-    color: #fff;
-    margin-top: 0px;
+.promotionTwoBottom h2{
+    color:black;
+    font-size:15px;
+    margin:10px;
+    font-weight: 800;
 }
-.catDesc h6:hover{
-    border-left: 10px solid #f4a51c;
-    transition: all .2s ease;
-    padding-left: 5px
+.promotionTwoBottom span{
+    color:black;
+    font-size:15px;
+    margin:5px;
 }
+.promotionTwoBottom button{
+    background-color:black;
+    font-size:15px;
+    margin:5px;
+    padding:10px;
+    color:white;
+    border:none;
+    width: 150px
+}
+
 
 @media screen and (max-width:1000px) {
-    .TopCartBottom{
-        width: 100%;
-        display: flex;
-        flex-wrap: nowrap;  
-        overflow-x: scroll !important;  
+    /* .promotionTwoTop{
+        width: 50%;
     }
-    .TopCartBottomCard{
-        margin: 15px 18px 15px 0;
+    .promotionTwoBottom{
+        width:40%;
+    } 
+    .promotionTwoBottom h4{
+        font-size:17px;
     }
+    .promotionTwoBottom h2{
+        font-size:22px;
+    } */
 }
 @media screen and (max-width:765px) {
-    .TopCartWrapper{
-        width: 100%;
+    .promotionTwoBottom{
+        width:100%;
+        margin-right: 0px;
+        justify-content:flex-end
+    } 
+    .promotionTwoBottom h4{
+        font-size:20px;
     }
-    .TopCartBottom{
-        width: 100%;
-        display: flex;
-        flex-wrap: nowrap;  
-        overflow-x: scroll !important;  
+    .promotionTwoBottom h2{
+        color:black;
+        font-size:12px;
     }
-    .TopCartTop h5{
-        font-size: 25px;
-        margin: 10px 0;
+    .promotionTwoBottom span{
+        color:black;
+        font-size:12px;
+        margin:5px;
     }
-    .TopCartTop h6{
-        font-size: 12px;
-        color: white;
+    .promotionTwoBottom button{
+        
     }
-    .TopCart span{
-        margin-right: 3px;
-        font-size: 14px;
-        padding: 4px;
-        border-radius: 5px;
+    .promotionTwo{
+        margin-top: 50px;
     }
-    .TopCartBottomCard{
-        margin: 15px 18px 15px 20px;
-        width: 100px;
-        /* background-color: black; */
+    .promotionTwoWrapper{
+        justify-content: center;
     }
-    .TopCartBottomCard img{
-        width: 120px;
-        height: 100px;
-        object-fit: cover;
+    .promotionTwoTop{
+        position: absolute;
+        top: -50px;
+        left: 95px
     }
-    .catDesc{
-        left:4px;
-        top: 34px;
-    }
-    .catDesc h5{
-        font-size: 15px;
-        line-height: 15px;
-    }
-    .catDesc h6{
-        font-size: 12px;
+
+    .promotionTwoTop img{
+        width: 75%;
+        height: 100%;
+        object-fit: fill;
+      
     }
 }
