--- a/src/Components/TopSales/topsales.css
+++ b/src/Components/TopSales/topsales.css
@@ -9,12 +9,11 @@
     text-decoration: none !important;
 }
 .TopSalesWrapper{
-    width: 100%;
+    width: 85%;
     background-color: white;
     display: flex;
     flex-direction: column;
-    -webkit-box-shadow:0px 1px 16px -8px rgba(0,0,0,0.67);
-    box-shadow: 0px 0px 16px -8px rgba(0,0,0,0.67);
+    margin-bottom: 17px;
 }
 .TopSalesTop{
     display: flex;
