--- a/src/Components/Topbar/topbar.css
+++ b/src/Components/Topbar/topbar.css
@@ -1,26 +1,22 @@
 .topbarContainer{
     width: 100vw;
-    height: 50px;
-    background-color: #fff;
     display: flex;
+    height: 70px;
     align-items: center;
     justify-content: center;
-    -webkit-box-shadow:0px 1px 16px -8px rgba(0,0,0,0.67);
-    box-shadow: 0px 0px 16px -8px rgba(0,0,0,0.67);
-    position: sticky;
+    /* position: sticky;
     z-index: 999;
-    top: 0;
+    top: 0; */
 }
 .topbarWrapper{
-    background-color: #fff;
     width: 87%;
     height: 100%;
     display: flex;
     align-items: center;
+    justify-content: space-between;
     
 }
 .topbarRight{
-    flex: 2;
 }
 .topbarRight{
     display: flex;
@@ -38,35 +34,7 @@
     margin: 0 5px;
     font-size: 17px;
 }
-.topbarMiddle{
-    flex: 4;
-    display: flex;
-    align-items: center;
-}
-.topbarMiddleSearch{
-    display: flex;
-    /* background-color: rgb(255, 3, 3); */
-    width: 80%;
-    height: 10px;
-    align-items: center;
-    padding: 10px 5px;
-    border: 1px solid black;
-    
-    
-}
-.topbarMiddleSearch input{
-    border: none;
-    font-size: 12px;
-    margin-left: 10px;
-}
-.topbarMiddleSearch input:focus{
-    outline: none;
-}
-.topbarMiddleButton{
-
-}
 .topbarLeft{
-    flex: 2;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -107,8 +75,7 @@
     border-radius: 10px;
 }
 .hidden{
-    display: none !important;
-    cursor: pointer;
+    display: none;
 }
 
 
@@ -120,14 +87,11 @@
 
 
 
-@media screen and (max-width:456px){
+@media screen and (max-width:1000px){
     .topbarRight{
         flex: 20;
     }
-    .topbarMiddle{
-        display:none
-    }
-    .hidden{
+    .hidden{    
         display: block !important;
     }
     .topbarLeftInfo{
@@ -137,10 +101,7 @@
         justify-content: space-between;
     }
 }
-@media screen and (max-width:894px){
-    .topbarMiddle{
-        display:none
-    }
+@media screen and (max-width:764px){
     .hidden{
         display: block !important;
     }
