--- a/src/Components/Product/products.css
+++ b/src/Components/Product/products.css
@@ -6,42 +6,101 @@
     flex-wrap: wrap;
     justify-content: center;
 }
-
-.productsProduct{
-    width:100%;
-    background-color: white;
-    -webkit-box-shadow:0px 1px 16px -8px rgba(0,0,0,0.67);
-    box-shadow: 0px 0px 16px -8px rgba(0,0,0,0.67);
+.productFilter{
+    width: 85%;
     display: flex;
-    flex-direction: column;
-}
-.productProductsTop{
-    height: 30px;
-    border-bottom: 1px solid #eee;
-    justify-content: center;
+    height: 100px;
     align-items: center;
-    display: flex;
+    justify-content: space-between;
 }
-.productProductsTop h5{
-    color: #e61601;
-    font-size: 17px;
-    font-weight: 800;
+.productFilterLeft,.productFilterRight{
+    display: flex;
+    list-style: none;
     margin: 0;
     padding: 0;
-   
+}
+.productFilterLeft >li ,.productFilterRight > li{
+    padding: 5px;
+    margin-right: 20px;
+    border-radius: 20px;
+    border:  1px solid rgb(160, 160, 160);
+    /* width: 100px; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    transition: all 0.5s linear;
 
 }
-.productsLists{
+.productFilterLeft >li:nth-child(6) {
+    display:none;
+}
+.productFilterLeft >li:hover,.productFilterRight > li:hover {
+    border:  1px solid black;
+
+}
+.productsProduct{
+    width:85%;
     display: flex;
     flex-wrap: wrap;
 }
 .productsListsWrapper{
-    width: 150px;
-    margin: 5px 6px;
+    padding: 20px;
+    width: 19%;
+    height: 300px;
+    margin: 5px 29px 5px 0px;
     cursor: pointer;
     transition: all 0.5s ease-in-out;
+ }
+ .productsListsWrapper button{
+    visibility: hidden;
+ }
+ 
+ .productsListsWrapper:hover button{
+     visibility: visible;
+     transition: all 0.5s ease;
+ }
+.productListsTop{
+    width: 100%;
+    height: 200px;
+    margin: 5px 0px 10px 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
 }
-.productListsButton{
+.productListsTop img{
+    max-width: 100%;
+    height: 100%;
+    object-fit: cover;
+    /* margin-left: 30px; */
+}
+.productListsBottom{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+}
+.productListsBottom h5{
+    color: black;
+    font-size: 16px;
+    margin: 0;
+    padding: 0;
+    font-weight: 600;
+    width: 220px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+.productListsBottom p{
+    margin: 10px 0;
+    padding: 0;
+    font-size: 15px;
+    color: black;
+    text-decoration: line-through;
+} 
+/*.productListsButton{
     background-color: #e61601;
     color: white;
     border: none;
@@ -52,7 +111,7 @@
     visibility: hidden;
     cursor: pointer;
     align-self: flex-end;
-    /* transition: all 0.5s ease; */
+    transition: all 0.5s ease;
 }
 .productListsButton:disabled{
     cursor: not-allowed;
@@ -67,73 +126,72 @@
 .productsListsWrapper:hover button:disabled{
     cursor: not-allowed;
 }
-.productListsTop{
-    width: 100px;
-    height: 100px;
-    margin: 5px 6px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-.productListsTop img{
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    margin-left: 30px;
-}
-.productListsBottom{
-    margin: 3px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-.productListsBottom h5{
-    color: #e61601;
-    font-size: 14px;
-    margin: 0;
-    padding: 0;
-    font-weight: 500;
-    text-align: center;
-    width: 150px;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    display: -webkit-box;
-  -webkit-line-clamp: 3;
-  -webkit-box-orient: vertical;
-}
-.productListsBottom h6{
-    margin: 3px 0;
-    padding: 0;
-    font-size: 13px;
-    color: black;
-    text-align: center;
-}
-.productListsBottom p{
-    margin: 0;
-    padding: 0;
-    font-size: 12px;
-    color: black;
-    text-align: center;
-    text-decoration: line-through;
-}
+*/
 
 
-@media screen and (max-width:700px) {
-    .productsProduct{
-        margin-right: 0%;
-    }
-    .productListsTop{
-        width: 80px;
-        height: 100px;
-        margin: 5px 6px;
-    }
+@media screen and (max-width:1365px) {
     .productsListsWrapper{
-        width: 120px;
-        height: 200px;
-        margin: 4px 3px;
-        cursor: pointer;
-        transition: all 0.5s ease-in-out;
+        width: 26%;
+        margin: 5px 30px 10px 0px;
+     }
+     .productListsBottom h5{
+        width: 250px;
+     }
+}
+@media screen and (max-width:1050px) {
+    .productsListsWrapper{
+        width: 25%;
+        margin: 5px 14.4px 10px 0px;
+     }
+     .productListsBottom h5{
+        width: 250px;
+     }
+}
+@media screen and (max-width:1145px) {
+    .productsListsWrapper{
+        width: 26%;
+        margin: 5px 14.4px 10px 0px;
+     }
+     .productListsBottom h5{
+        width: 200px;
+     }
+}
+@media screen and (max-width:1000px) {
+    .productsListsWrapper{
+        width: 25%;
+        margin: 5px 16px 10px 0;
+     }
+     .productListsBottom h5{
+        width: 150px;
+     }
+}
+@media screen and (max-width:765px) {
+    .productsListsWrapper{
+        width: 40%;
+        margin: 5px 16px 10px 0;
+     }
+     .productListsBottom h5{
+        width: 200px;
+     }
+     .productFilterLeft >li:nth-child(6) {
+        display:flex !important;
+    }
+     .productFilterLeft >li {
+        display:none;
+    }
+}
+@media screen and (max-width:650px) {
+    .productsListsWrapper{
+        width: 100%;
+        /* margin: 5px 16px 10px 0; */
+     }
+     .productListsBottom h5{
+        width: 300px;
+     }
+     .productFilterLeft >li:nth-child(6) {
+        display:flex !important;
+    }
+     .productFilterLeft >li {
+        display:none;
     }
 }
