--- a/src/Page/ProductPage/Product.css
+++ b/src/Page/ProductPage/Product.css
@@ -4,6 +4,28 @@
     justify-content: center;
 }
 .productdetail{
-    width: 87%;
-    height: 150px;
+    width: 85%;
+    height: 200px;
+    border-bottom: 1px solid rgb(82, 82, 82);
+    display: flex;
+    justify-content: flex-start;
+
+}
+.productName{
+    width: 70%;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+.productName > h2{
+    font-size: 25px;
+    color: black;
+    text-align: start !important;
+    margin-bottom: 30px;
+}
+.productName > p{
+    font-size: 15px;
+    line-height: 20px;
+    color: black;
+    opacity: 0.6;
 }
