--- a/src/Components/Promotion/promotion.css
+++ b/src/Components/Promotion/promotion.css
@@ -18,9 +18,10 @@
     display: flex;
     width: 60%;
     margin-left: 26px;
+    align-items: center;
 }
 .promotionTop img{
-    width: 83%;
+    width: 550px;
     height: 100%;
     object-fit: fill;
   
@@ -76,7 +77,7 @@
      .promotionWrapper{
         flex-direction: column;
         width: 100%;
-        height: 280px;
+        height: 408px;
     }
    .promotionTop{
         width: 100%;
@@ -91,5 +92,8 @@
     }
     .promotionBottom h2{
         font-size:22px;
+    }
+    .promotionTop img{
+        width: 83%;
     }
 }
